trying other matching method

--- a/LinesTracker/CMakeLists.txt
+++ b/LinesTracker/CMakeLists.txt
@@ -3,5 +3,7 @@ project( LinesFeatures )
 find_package( OpenCV REQUIRED )
 add_executable( LinesFeatures LineDescriptors.cpp )
 add_executable( LinesMatching LinesMatching.cpp )
+add_executable( LinesMatcher_bis LinesMatcher_bis.cpp )
 target_link_libraries( LinesFeatures ${OpenCV_LIBS} )
 target_link_libraries( LinesMatching ${OpenCV_LIBS} )
+target_link_libraries( LinesMatcher_bis ${OpenCV_LIBS} )
